--- a/src/components/Button.css
+++ b/src/components/Button.css
@@ -1,5 +1,5 @@
 .button-main{
     padding: .75rem 1.5625rem;
-    border: .0625rem solid #7874F4;
+    border: .0625rem solid #e70c0c;
     border-radius: 2rem;
 }
