--- a/src/components/AboutHero.css
+++ b/src/components/AboutHero.css
@@ -1,12 +1,34 @@
 .div-about-hero{
     width: 100%;
     border-radius: 1028px;
-    
+    padding-bottom: 4rem;    
+}
+
+.about-background-image-DgPrd{
+    position: absolute;
+    bottom: 35rem;
+    left: 9.3rem;
+    width: 60vw; /* Ancho del viewport */
+    height: 60vw; /* Altura del viewport */
+    z-index: -1;
+    background-position: top left;
+    opacity: 70%;
 }
 
 .div-about-belive{
     background-color: #E3E1EE ;
-    padding: 2rem 1rem;
+    padding: 2rem 1rem 2.5rem;
+}
+
+.div-svg-about{
+    border-bottom: 1px solid #3c3c3bcc;
+    padding: 2rem 0 .5rem;
+    
+}
+
+.about-section-need{
+    margin: 1rem 1rem  0;
+    position: relative;
 }
 
 .about-hero-h1{
@@ -19,16 +41,29 @@
     padding: 0 1.5rem;    
 }
 
-.about-hero-h1 span{
-    color: #7874f4;
+.about-span-hero{
+    color: #7874F4;
+}
+
+.about-span{
+    color: #7874F4;
+    font-size: 1.25rem;
+    margin: 0 .2rem;
+    
 }
 
 .about-hero-h2{
+    color: #3C3C3B;
     text-align: left;
-    font-size: 2.25rem;
+    font-size: 2rem;
     text-wrap: balance;
     color: #3c3c3b;
     line-height: 2.375rem;  
+}
+
+.about-h3{
+    color: #3C3C3B;
+    font-size: 1.5rem;
 }
 
 
@@ -39,7 +74,12 @@
     line-height: 1.375rem;
     padding: 1rem 2rem 0;
     text-wrap: balance;
+}
 
+.about-believe-p{
+    color: #868685;
+    font-size: 1rem;
+    margin: 1rem 0;
 }
 
 
@@ -48,3 +88,45 @@
     color: #7874F4;
     margin: 14.3rem auto 0;
 }
+
+.about-hero-need-h2{
+    margin: 5.5rem 0 1rem;
+    font-size: 2rem;
+    display: -webkit-box;
+}
+
+.about-need-p{
+    color: #3C3C3B;
+    font-size: 1rem;
+    margin: 1rem 0;
+}
+
+.about-div-specialist {
+    display: flex;
+    flex-wrap: wrap;
+    margin: 0 0 1.5rem;
+  }
+  
+  .about-div-specialist > div {
+    flex: 1 0 50%;
+    padding: 10px;
+    box-sizing: border-box;
+}
+
+.about-need-h3{
+    font-size: 1rem;
+    color: #3C3C3B;
+}
+
+.about-need-p1{
+    color: #7874F4;
+    font-size: .875rem;
+    text-transform: uppercase;
+}
+
+.about-button-contact{
+    font-size: .875rem;
+    color: #7874F4;
+    margin: 4rem auto 0;
+}
+
