--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,6 +1,14 @@
 .header{
-    margin: 2rem 1rem ;
-    padding: 0 0 1rem;
+    position: fixed;
+    width: 100%;
+    top: 0;
+    background-color: #F4F3EF;
+    z-index: 1;    
+}
+
+.div-header{
+    margin: 0 1rem;
+    padding: 2rem 0 1rem;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -17,9 +25,8 @@
     width: 8.5rem;
 }
 
-
-
 #menu__toggle {
+    display: none;
     opacity: 0;
 }
 
@@ -42,13 +49,8 @@
 .menu__btn {
     display: flex;
     align-items: center;
-    position: fixed;
-    top: 40px;
-    right: 25px;
-
-    width: 26px;
-    height: 26px;
-
+    position: relative;
+    width: 1.625rem;
     cursor: pointer;
     z-index: 1;
 }
@@ -77,34 +79,28 @@
 
 .menu__box {
     text-align: center;
-    display: block;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 2rem;
+    font-size: 1.5rem;
     position: fixed;
-    visibility: hidden;
     top: 0;
     right: -100%;
-
-    width: 80%;
-    height: 50%;
-
+    width: 100%;
+    height: 100%;
     margin: 0;
     padding: 80px 0;
-
-    list-style: none;
-
     background-color: #F4F3EF;
     box-shadow: 1px 0px 6px rgba(0, 0, 0, .2);
-
     transition-duration: .45s;
 }
 
 .menu__item {
     display: block;
     padding: 12px 24px;
-
     color: #333;
-
-    text-decoration: none;
-
     transition-duration: .25s;
 }
 
@@ -113,10 +109,15 @@
 }
 
 @media(min-width:900px){
-    .hamburger-menu{        
+    .menu__btn{        
         display: none;
     }
     .nav-links{
+        all: unset;
+        display: flex;
+    }
+    .menu__box{
+        all: unset;
         display: flex;
     } 
 }
