--- a/src/components/Home/Hero.css
+++ b/src/components/Home/Hero.css
@@ -1,45 +1,185 @@
 .hero-section{
-    margin: 6.5rem 0 1rem;
     overflow: hidden;
+    height: 100vh;
     width: 100%;
 }
-
 .hero-img{
-    margin-left: 12%;
+    position: relative;
+    top: 4.5rem;
+    right: -2.5rem;
+    width: 100%;
+    height: 52%;
+    max-height: 32rem;
+    min-height: 22rem;
+    object-fit: contain;
 }
-
+.hero-top-content {
+    display: flex;
+    flex-direction: column;
+}
+.hero-text{
+    text-align: center;
+    position: relative;
+    top: 3.5rem;
+}
 .hero-p{
-    text-align: center;    
     font-size: 0.875rem;
+    text-align: center;    
     color: #868685;
     line-height: 1.375rem;
-    padding: 1rem 2rem 0;
 }
-
 .hero-h1{
-    text-align: center;
-    font-size: 2.25rem;
-    text-wrap: balance;
-    color: #3c3c3b;
+    margin: .4rem 0;
+    font-size: 2em;
     line-height: 2.375rem;
-    margin: .8rem 0;
-    
+    color: #3c3c3b;
+    text-align: center;
+    text-wrap: balance;
 }
-
 .hero-h1 span{
     color: #7874f4;
 }
-
+.hero-godown{
+    position: absolute;
+    width: 100%;
+    text-align: center;
+    left: 0;
+    bottom: 1rem;
+    max-width: 90rem;
+    font-size: .9em;
+}
 .hero-godown{
     color: #7874f4;
-    text-align: center;
-    padding-top: 3rem ;
 }
-
 .icon-godown{
-    margin-top: 10px;
+    margin-top: .45rem;
     fill: none;
     height: .375rem;
-    border: 1px;
-    stroke: #7874F4; 
+}
+@media (min-width: 24.375rem) {
+    .hero-img{
+        top: 5.5rem;
+        right: -3rem;
+        height: 60%;
+        max-height: 23rem;
+    }
+    .hero-text{
+        top: 4rem;
+        padding: 1.5rem 2rem 0;
+    }
+    .hero-h1{
+        font-size: 2.25em;
+        margin: .8rem 0;
+    }
+    .hero-godown{
+        font-size: 1em;
+        bottom: 1.5rem;
+    }
+}
+@media (min-width: 40rem) {
+    .hero-img{
+        top: 5.5rem;
+        right: -5rem;
+    }
+    .hero-text{
+        top: 5rem;
+        padding: 1.5rem 2rem 0;
+    }
+    .hero-p{
+        font-size: 1.05rem;
+        text-align: center;    
+        color: #868685;
+        line-height: 1.375rem;
+    }
+    .hero-h1{
+        font-size: 3.2em;
+        line-height: 3.35rem;
+        margin-bottom: 2.5rem;
+    }
+    .hero-godown{
+        font-size: 1.1em;
+        bottom: 1.2rem;
+    }
+}
+@media (min-width: 56.25rem) {
+    .hero-section{
+        margin-right: 2rem;
+    }
+    .hero-top-content{
+        height: 90%;
+        justify-content: flex-start;
+    }
+    .hero-img{
+        align-self: flex-end;
+        order: 2;
+        right: 0;
+        min-height: unset;
+        max-width: 35rem;
+        max-height: unset;
+        width: 55%;
+        height: 70%;
+    }
+    .hero-godown{
+        position: static;
+        display: flex;
+        justify-content: flex-end;
+        order: 2;
+        gap: 1rem;
+        padding: 0 2rem 2.2rem 0;
+    }
+    .hero-godown-a{
+        order: 2;
+    }
+    .icon-godown{
+        order: 1;
+        width: 1.25rem;
+        fill: none;
+    }
+    .hero-text{
+        text-align: left;
+        position: absolute;
+        top: unset;
+        bottom: 10%;
+    }
+    .hero-h1, .hero-p{
+        width: 100%;
+        text-align: left;
+    }
+    .hero-h1{
+        max-width: 40rem;
+        font-size: 4.5em;
+        line-height: 4.8rem;
+    }
+}
+@media (min-width: 70rem) {
+    .hero-h1{
+        max-width: 45rem;
+        font-size: 5em;
+        line-height: 5.3rem;
+    }
+    .hero-img{
+        max-height: unset;
+        width: 40%;
+        height: 70%;
+        margin-top: 0;
+    }
+    .hero-text{
+        bottom: 10%;
+    }
+}
+@media (min-width: 90rem) {
+    .hero-h1{
+        max-width: 70rem;
+        font-size: 5.6em;
+        line-height:6rem;
+    }
+    .hero-img{
+        max-height: unset;
+        width: 50%;
+        height: 70%;
+        margin-top: 0;
+    }
+    .hero-text{
+        bottom: 7%;
+    }
 }
