--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -32,3 +32,35 @@
     justify-content: space-between;
     margin: 1rem .5rem 1rem 0;
 }
+
+@media(min-width:56.25rem){
+    .footer-nav-links{
+        margin: 2rem 3rem 8rem;
+        display: flex;
+        gap: 6.5rem;
+        color: #3C3C3B; 
+        padding: .7rem 0;
+        color: #000000;
+        font-size: 20px;
+        font-style: normal;
+    }
+    .footer-mid{
+        margin: 0 3rem;
+        padding-bottom: 1rem ;    
+    }
+    .logo-footer{        
+        width: 15%;
+        opacity: 80%;
+    }
+    .footer-policy{
+        display: flex;
+        margin: 2rem 3rem;
+        
+    }
+    .footer{
+        width: 100vw;
+        overflow-x: hidden;
+        overflow-y: hidden;
+    }
+
+}
