--- a/src/components/Home/Hero.css
+++ b/src/components/Home/Hero.css
@@ -1,7 +1,7 @@
 .hero-section{
     overflow: hidden;
     height: 100vh;
-    width: 100%;
+    width: 100vw;
 }
 .hero-img{
     position: relative;
@@ -108,6 +108,7 @@
     .hero-top-content{
         height: 90%;
         justify-content: flex-start;
+        padding: 1rem;
     }
     .hero-img{
         align-self: flex-end;
@@ -120,12 +121,12 @@
         height: 70%;
     }
     .hero-godown{
-        position: static;
         display: flex;
         justify-content: flex-end;
         order: 2;
         gap: 1rem;
-        padding: 0 2rem 2.2rem 0;
+        padding: 0 2rem .2rem 0;
+        margin-bottom: 11rem;
     }
     .hero-godown-a{
         order: 2;
@@ -144,11 +145,13 @@
     .hero-h1, .hero-p{
         width: 100%;
         text-align: left;
+        margin: 1rem 1.4rem;
     }
     .hero-h1{
         max-width: 40rem;
         font-size: 4.5em;
         line-height: 4.8rem;
+        margin: 1rem 1.2rem;
     }
 }
 @media (min-width: 70rem) {
@@ -156,6 +159,8 @@
         max-width: 45rem;
         font-size: 5em;
         line-height: 5.3rem;
+        margin-bottom: 0;
+        margin-top: 1.7rem;
     }
     .hero-img{
         max-height: unset;
@@ -166,20 +171,7 @@
     .hero-text{
         bottom: 10%;
     }
-}
-@media (min-width: 90rem) {
-    .hero-h1{
-        max-width: 70rem;
-        font-size: 5.6em;
-        line-height:6rem;
-    }
-    .hero-img{
-        max-height: unset;
-        width: 50%;
-        height: 70%;
-        margin-top: 0;
-    }
-    .hero-text{
-        bottom: 7%;
+    .hero-btn.button-main{
+        margin: 0 1rem 5rem;
     }
 }
