--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -13,13 +13,19 @@
     align-items: center;
     border-bottom: .0813rem solid #3c3c3bcc;
 }
+.logo-header-hamburger{
+    margin: 0 0 1rem;
+    padding: 1rem 0;
+    border-bottom: .0813rem solid #3c3c3bcc;    
+}
+
 .nav-links{
     display: flex;
     gap: 1rem;
     color:#3c3c3bcc;  
 }
 .logo-header{
-    width: 8.5rem;
+    width: 8.7733rem;
 }
 #menuToggle {
     display: none;
@@ -91,7 +97,7 @@
 }
 @media (min-width: 24.375rem) {
     .div-header{
-        padding: 2rem 0 1rem;
+        padding: 2rem 0 .7rem;
     }
     .menu-box {
         gap: 3rem;
@@ -101,12 +107,17 @@
 @media(min-width:40rem){
     .div-header{
         margin: 0 2rem;
-        padding: 1.5rem 0 1rem;
+        padding: 1.5rem 0 .8rem;
     }
 }
 @media(min-width:56.25rem){
+    .menu-item{
+        font-size: 1.0625rem;
+        font-weight: 500;
+    }
     .div-header{
-        margin: 0 1.5rem;
+        margin: 0 3.5rem;
+        padding-bottom: 1rem;
     }
     .menu-btn{        
         display: none;
@@ -114,9 +125,44 @@
     .menu-box{
         all: unset;
         display: flex;
-        gap: 2rem;
+        gap: 4.5rem;
+        font-size: .9625rem;
+        color: #3c3c3b;
     } 
     .header{
-        max-width: 90rem;
+        width: 100vw;
+        overflow-x: hidden;
+        overflow-y: hidden;
     }
+    .hero-btn{
+        display: inline-flex;
+        padding: .5rem 1.4375rem;
+        justify-content: center;
+        align-items: center;
+        gap: 10px;
+    }
+    .hero-godown{
+        gap: 0;
+    }
+    .icon-godown{
+        width: 22px;
+        height: 11px;
+        flex-shrink: 0;
+        stroke-width: 1px;
+    }
+    .hero-godown-a{
+        width: 236px;
+        height: 35px;
+        justify-content: center;
+        flex-shrink: 0;
+    }
+    .hero-h1{
+        flex-shrink: 0;
+        width: 992px;
+        height: 247px;
+    }
+    .logo-header-hamburger{
+        display: none;
+    }
+
 }
