--- a/src/components/Home/HomeServices.css
+++ b/src/components/Home/HomeServices.css
@@ -84,7 +84,10 @@
         max-width: 35rem;
     }
 }
-@media(min-width: 70rem){
+@media(min-width: 90rem){
+    .home-services{
+        margin: 0 3rem 0 3rem;
+    }
     .home-services-h2{
         font-size: 4.5em;
     }
