"Adjustments for 1920p resolution"
- Adjust main container to extend up to 1920p width
- Modify styles to enhance display on large screens
- Fix horizontal scrolling on higher resolutions
- Update fonts and element sizes for improved readability on wide screens"

--- a/src/App.css
+++ b/src/App.css
@@ -45,10 +45,9 @@ body {
     min-height: 100vh;
     font-size: 100%;
     background-color:#F4F3EF;
-    
+    margin: 0 auto;
 }
-#root {
-  max-width: 100vw;
-  margin: 0 auto;
+.main-content{
+    max-width: 125rem;
+    margin: 0 auto;
 }
-
