--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -27,25 +27,35 @@
     padding-bottom: 1rem;
 }
 .footer-policy{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
     margin: 1rem .5rem 1rem 0;
+}
+.footer-policy-links{
+    padding-top: .5rem;
+    display: flex;
+    gap: 1.5rem;
 }
 
 @media(min-width:56.25rem){
+    .footer{
+        padding: .7rem 2rem;
+    }
     .footer-nav-links{
-        margin: 2rem 3rem 8rem;
+        position: relative;
+        margin: 2rem 0 8rem;
         display: flex;
-        gap: 6.5rem;
+        gap: 3.5rem;
         color: #3C3C3B; 
         padding: .7rem 0;
         color: #000000;
         font-size: 20px;
         font-style: normal;
     }
+    .language-link{
+        position: absolute;
+        top: .7rem;
+        right: 0;
+    }
     .footer-mid{
-        margin: 0 3rem;
         padding-bottom: 1rem ;    
     }
     .logo-footer{        
@@ -54,13 +64,36 @@
     }
     .footer-policy{
         display: flex;
-        margin: 2rem 3rem;
-        
+        justify-content: space-between;
+        padding: 2rem 0 3rem ;
+        font-size: 1.2em;
+    }
+    .footer-policy-links{
+        padding-top: .5rem;
+        display: flex;
+        gap: 2.5rem;
+        padding-top: 0;
     }
     .footer{
-        width: 100vw;
         overflow-x: hidden;
-        overflow-y: hidden;
     }
+}
 
+@media (min-width: 90rem) {
+    .footer{
+        padding: .7rem 4rem;
+    }
+    .footer-nav-links{
+        gap: 6.6rem;
+    }
+}
+
+@media (min-width: 125rem) {
+    .footer{
+        padding: .7rem 0;
+    }
+    .footer-maxwidth{
+        margin: 0 auto;
+        max-width: 115rem;
+    }
 }
