--- a/src/components/About/AboutHero.css
+++ b/src/components/About/AboutHero.css
@@ -5,7 +5,7 @@
     flex-direction: column;
     justify-content: center;
     width: 100%;
-    overflow: hidden; 
+    overflow-x: hidden; 
 }
 .div-about-belive{
     background-color: #E3E1EE ;
@@ -125,14 +125,17 @@
     .div-about-belive{
         display: flex;
         justify-content: space-between;
-        padding: 1rem 2rem 3rem;
-        gap: 4rem;
+        padding: 1rem 4rem 3rem;
+    }
+    .about-section-need{
+        margin: 3rem 2.5rem 0;
     }
     .div-about-belive article{
-        width: 22rem;
+        width: 30%;
     }
     .about-hero-h2{
-        padding: 1rem 2rem;
+        padding: 4rem 2.5rem 2rem;
+        font-size: 3.1rem;
     }
     .about-h3{
         font-size: 2.15em;
@@ -163,5 +166,72 @@
         top: -3rem;
         right: 3.5rem;
         max-width: 25rem;
+    }
+    .about-hero-btn{
+        margin-top: 3.5rem;
+    }
+}   
+@media (min-width: 90rem){
+    .div-about-belive{
+        padding: 3rem 4rem 3rem;
+        display: flex;
+        justify-content: center;
+        gap: 4rem;
+    }
+    .about-section-need{
+        margin: 1rem 4rem 0;
+    }
+    .div-about-belive article{
+        width: 28rem;
+    }
+    .about-h3{
+        font-size: 2.6em;
+    }
+    .about-believe-p{
+        font-size: 1.2em;
+    }
+
+}
+
+@media (min-width: 120rem){
+    .div-about-belive{
+        padding: 1rem 4rem 3rem;
+    }
+    .about-section-need{
+        margin: 1rem 4rem 0;
+    }
+    .about-hero-h2{
+        padding: 3rem 4rem;
+        font-size: 3.5rem;
+    }
+    .div-about-belive article{
+        width: 28rem;
+    }
+    .about-h3{
+        font-size: 2.4em;
+    }
+    .about-believe-p{
+        font-size: 1.2em;
+    }
+    .div-svg-about > img{
+        width: 5rem;
+    }
+    .div-about-belive{
+        gap: 6rem;
+    }
+}
+
+@media (min-width: 125rem){
+    .div-about-belive{
+        max-width: 115rem;
+        margin: 0 auto;
+    }
+    .about-section-need{
+        margin: 1rem auto 0;
+        max-width: 115rem;
+    }
+    .about-hero-h2{
+        max-width: 115rem;
+        margin: 0 auto;
     }
 }
