--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -116,7 +116,7 @@
         font-weight: 500;
     }
     .div-header{
-        margin: 0 3.5rem;
+        margin: 0 2.5rem;
         padding-bottom: 1rem;
     }
     .menu-btn{        
@@ -125,14 +125,9 @@
     .menu-box{
         all: unset;
         display: flex;
-        gap: 4.5rem;
+        gap: 2.2rem;
         font-size: .9625rem;
         color: #3c3c3b;
-    } 
-    .header{
-        width: 100vw;
-        overflow-x: hidden;
-        overflow-y: hidden;
     }
     .hero-btn{
         display: inline-flex;
@@ -156,13 +151,22 @@
         justify-content: center;
         flex-shrink: 0;
     }
-    .hero-h1{
-        flex-shrink: 0;
-        width: 992px;
-        height: 247px;
-    }
     .logo-header-hamburger{
         display: none;
     }
 
+}
+@media(min-width:90rem){
+    .div-header{
+        margin: 0 4rem;
+    }
+    .menu-box{
+        gap: 4.5rem;
+    }
+}
+@media(min-width:125rem){
+    .div-header{
+        max-width: 115rem;
+        margin: 0 auto;
+    }
 }
