--- a/src/components/Services/Services.css
+++ b/src/components/Services/Services.css
@@ -43,28 +43,9 @@
     padding: 1.5rem 1rem;
     background-color: #E3E1EE;
     border-radius: 1.25rem;
-    border: 1px solid #7874F4;
 }
 
-.services-card-0 {
-    position: sticky;
-    top: -22rem;
-    left: 0;
-    min-height: 40rem;
-    width: 100%;
-    padding: 1.5rem 1rem;
-    background-color: #E3E1EE;
-    border-radius: 1.25rem;
-
-  }
-  
-  .services-card-1 {
-    position: sticky;
-    top: -22rem;
-    left: 0;
-    min-height: 40rem;
-    width: 100%;
-    padding: 1.5rem 1rem;
+.services-card-1 {
     background-color: hsla(47,18%,94%,1);
     background-image: 
       radial-gradient(at 13% 90%, hsla(46,16%,94%,1) 0px, transparent 80%),
@@ -75,26 +56,12 @@
       radial-gradient(at 84% 81%, hsla(240,45%,87%,1) 0px, transparent 50%);
     background-position: center top; /* Centrar el fondo verticalmente en la parte superior */
     background-size: cover;
-    
-
-    border-radius: 1.25rem;
-
   }
-  
-  .services-card-2 {
-    position: sticky;
-    top: -22rem;
-    left: 0;
-    min-height: 40rem;
-    width: 100%;
-    padding: 1.5rem 1rem;
+
+.services-card-2 {
     background-color: hsla(47, 18%, 94%, 1);
     background-image: linear-gradient(-43deg, hsla(47, 18%, 94%, 1),rgba(115, 113, 244, 0.137));
-    
-
-    border-radius: 1.25rem;
-    border: 1px solid #7874F4;
-  }
+}
 
 .services-cards-top{
     max-width: 90%;
@@ -145,8 +112,6 @@
     font-size: 1.25em;
     max-width: 32rem;
 }
-
-
 @media (min-width: 56.25rem){
     .hero-services{
         margin: 13rem 0 9rem;
@@ -173,22 +138,20 @@
     .services-cards-top{
         max-width: 100%;
         flex-direction: row;
+        justify-content: space-between;
         align-items: center;
-        gap: 13.5rem;
+        gap: 0;
         padding-bottom: 2.5rem;
     }
     .services-cards-top h2{
-        font-size: 2.5rem;
+        font-size: 2.5em;
         width: 12rem;
-        margin: 0 1.5rem;
     } 
     .services-cards-top p{
         font-size: 1.15rem;
-        max-width: 50rem;
+        max-width: 34rem;
         text-wrap: balance;
-        line-height: 1.4;
     }
-
     .services-cards{
         top: 8rem;
         min-height: 20rem;
@@ -200,15 +163,98 @@
         grid-template-columns: repeat(3, 1fr);
         column-gap: 2rem;
     }
-    .service-footer{
-        display: flex;
-        flex-wrap: wrap;
+    .services-card-bottom{
+        justify-content: space-between;
+        gap: 2rem;
+    }
+    .services-cards-span{
+        font-size: 1.25em;
+    }
+    .services-cards-h3{
+        max-width: 18rem;
+        font-size: 2rem;
+        line-height: 2.2rem;
+        color: #3c3c3b;
+    }
+    .services-cards-p{
+        max-width: 20rem;
+        font-size: 1.25rem;
+        color: #868685;
+    }
+    .why-gigson{
+        margin: 7rem 2rem;
+        padding: 3rem 2rem;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: flex-start;
+    }
+    .why-gigson > h2{
+        font-size: 3em;
+        text-wrap: balance;
+        max-width: 25rem;
+    }
+    .why-gigson p {
+        font-size: 1.7em;
+        /* max-width: 28rem; */
+        /* padding-bottom: 2rem; */
+    }
+}
+
+
+@media (min-width: 100rem){
+    .hero-services{
+        margin: 13rem 0 9rem;
+    }
+    .services-container{
+        padding: 0 2rem;
+    }
+    .hero-services-h1{
+        max-width: 20rem;
+        font-size: 3.43em;
+        line-height: 3.8rem;
+        padding-top: .7rem;
+    }
+    .hero-services-p{
+        font-size: 1.25em;
+    }
+    .hero-services-img{
+        height: 27rem;
+        max-width: 40rem;
+        top: 0;
+        left: 50%;
+        transform: translateX(-50%);
+    }
+    .services-cards-top{
+        max-width: 100%;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+        gap: 0;
+        padding-bottom: 2.5rem;
+    }
+    .services-cards-top h2{
+        font-size: 2.5em;
+        width: 12rem;
+    } 
+    .services-cards-top p{
+        font-size: 1.15rem;
+        max-width: 54rem;
+        text-wrap: balance;
+    }
+    .services-cards{
+        top: 8rem;
+        min-height: 20rem;
+        width: 100%;
+        padding: 2rem 2rem 4rem;
+    }
+    .services-cards > footer{
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        column-gap: 2rem;
     }
     .services-card-bottom{
-         width: calc(33.33% - 20px); /* Ancho de cada tarjeta */
-        margin: 10px;
-        padding: 20px;
-        border-top: 1px solid #3C3C3Bcc;
+        justify-content: space-between;
+        gap: 2rem;
     }
     .services-cards-span{
         font-size: 1.25em;
