--- a/src/components/About/AboutHero.css
+++ b/src/components/About/AboutHero.css
@@ -1,19 +1,42 @@
 .div-about-hero{
     height: calc(100vh - 6rem);
-    margin-top: 6rem;
+    margin-top: 8rem;
     display: flex;
     flex-direction: column;
     justify-content: center;
     width: 100%;
-    overflow-x: hidden; 
+    overflow-x: hidden;
+    position: relative;
 }
-.div-about-belive{
-    background-color: #E3E1EE ;
+.about-bg{
+    margin: 0 auto;
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    top: 4rem;
+    z-index: -1;
+    background: url('../../assets/aboutBg.svg') no-repeat;
+    background-size: contain;
+    background-position: 50% 0;
+}
+.about-bg:before{
+    content: '';
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    top: 0;
+    background: linear-gradient(0deg, #F4F3EF 0%, #ffffff00 100%);
+}
+.about-belive-max{
+    background-color: #E3E1EE;
     padding: 2rem 1rem 2.5rem;
 }
 .div-svg-about{
     border-bottom: 1px solid #3c3c3b93;
     padding: 2rem 0 .5rem;
+}
+.svg-about-circ{
+    margin-left: -.3rem;
 }
 .about-section-need{
     margin: 1rem 1rem 0;
@@ -37,12 +60,10 @@
     margin: 0 .2rem;
 }
 .about-hero-h2{
-    font-size: 2rem;
+    font-size: 2em;
     line-height: 2.375rem;  
-    width: 100%;
     color: #3C3C3B;
-    background-color: #E3E1EE;
-    padding: 2rem 1rem 0;
+    padding: 1rem 0;
 }
 .about-h3{
     color: #3C3C3B;
@@ -67,7 +88,7 @@
 .about-hero-btn {
     font-size: .875rem;
     color: #7874F4;
-    margin: 14.3rem auto 0;
+    margin: 8.3rem auto 0;
 }
 .about-hero-need-h2{
     margin: 5.5rem 0 1rem;
@@ -119,13 +140,19 @@
     }
     .about-hero-p{
         font-size: 1.25em;
-        line-height: 1.475rem;
+        line-height: 1.75rem;
         padding: 1.5rem .5rem 0;
     }
     .div-about-belive{
         display: flex;
         justify-content: space-between;
-        padding: 1rem 4rem 3rem;
+    }
+    .about-belive-max{
+        padding: 3rem 2.5rem 4rem;
+    }
+    .about-hero-h2{
+        padding: 1rem 0;
+        font-size: 3.1rem;
     }
     .about-section-need{
         margin: 3rem 2.5rem 0;
@@ -133,15 +160,11 @@
     .div-about-belive article{
         width: 30%;
     }
-    .about-hero-h2{
-        padding: 4rem 2.5rem 2rem;
-        font-size: 3.1rem;
-    }
     .about-h3{
-        font-size: 2.15em;
+        font-size: 2em;
     }
     .about-believe-p{
-        font-size: 1.2rem;
+        font-size: 1.05rem;
     }
     .about-div-specialist {
         padding: 4rem 0 inherit;
@@ -170,68 +193,107 @@
     .about-hero-btn{
         margin-top: 3.5rem;
     }
+    .about-bg{
+        top: 2rem;
+        height: 90%;
+    }
+    .about-bg:before{
+        all: unset;
+    }
 }   
 @media (min-width: 90rem){
     .div-about-belive{
-        padding: 3rem 4rem 3rem;
-        display: flex;
-        justify-content: center;
         gap: 4rem;
+    }
+    .about-belive-max{
+        padding: 3rem 4rem;
+    }
+    .about-hero-h2{
+        padding: 2rem 0;
+        font-size: 3.1rem;
     }
     .about-section-need{
         margin: 1rem 4rem 0;
     }
     .div-about-belive article{
         width: 28rem;
+    }
+    .about-h3{
+        font-size: 2.5em;
+    }
+    .about-believe-p{
+        font-size: 1.15em;
+    }
+    .about-hero-btn, .about-button-contact{
+        font-size: 1.25rem;
+    }
+    .about-hero-need-h2{
+        font-size: 3.44rem;
+        line-height: 3.75rem;
+        max-width: 34rem;
+    }
+    .about-need-p{
+        font-size: 1.88rem;
+        max-width: 60rem;
+        text-wrap: balance;
+        margin-top: 2rem;
+    }
+    .about-need-h3{
+        font-size: 2.1em;
+    }
+    .about-need-p1{
+        padding-top: .5rem;
+        font-size: 1.2em;
+    }
+    .about-div-specialist {
+        padding: 3rem 0 2rem;
+    }
+}
+
+@media (min-width: 120rem){
+    .about-belive-max{
+        padding: 2rem 4rem 4rem;
+    }
+    .about-section-need{
+        margin: 1rem 0rem 0;
+    }
+    .about-hero-h2{
+        padding: 3rem 0;
+        font-size: 3.5rem;
+    }
+    .div-about-belive article{
+        width: 32rem;
     }
     .about-h3{
         font-size: 2.6em;
     }
     .about-believe-p{
-        font-size: 1.2em;
-    }
-
-}
-
-@media (min-width: 120rem){
-    .div-about-belive{
-        padding: 1rem 4rem 3rem;
-    }
-    .about-section-need{
-        margin: 1rem 4rem 0;
-    }
-    .about-hero-h2{
-        padding: 3rem 4rem;
-        font-size: 3.5rem;
-    }
-    .div-about-belive article{
-        width: 28rem;
-    }
-    .about-h3{
-        font-size: 2.4em;
-    }
-    .about-believe-p{
-        font-size: 1.2em;
+        font-size: 1.3em;
     }
     .div-svg-about > img{
-        width: 5rem;
+        width: 4.5rem;
     }
-    .div-about-belive{
-        gap: 6rem;
+    .about-section-need{
+        padding: 2rem 4rem;
+    }
+    .about-background-image-DgPrd{
+        top: 1rem;
+        right: 5rem;
+        max-width: 30rem;
+    }
+    .about-div-specialist {
+        grid-template-columns: repeat(3, 32rem);
     }
 }
-
-@media (min-width: 125rem){
-    .div-about-belive{
+@media (min-width: 121rem){
+    .div-about-belive, .about-hero-h2, .about-section-need{
+        padding: inherit 0;
         max-width: 115rem;
         margin: 0 auto;
     }
     .about-section-need{
+        padding: 2rem 0;
         margin: 1rem auto 0;
-        max-width: 115rem;
     }
-    .about-hero-h2{
-        max-width: 115rem;
-        margin: 0 auto;
-    }
+
 }
