--- a/src/components/Button.css
+++ b/src/components/Button.css
@@ -6,9 +6,8 @@
 }
 .button-main:hover{
     transition: .2s linear;
-    background-color: #4e4b99;
-    color: aliceblue;
-    border-color: #ffffff00;
+    background-color: #E3E1EE;
+    color: #7874F4;
 }
 .hero-btn, .home-services-btn, .form-btn-send, .why-gigson-btn{
     font-size: .875rem;
@@ -23,6 +22,8 @@
     padding: .4rem .9rem;
     color: #3C3C3B;
     border: .0625rem solid #000;
+    border-radius: 2rem;
+    cursor: pointer;
 }
 .form-btn-send{
     margin: 1rem 0 1rem;
@@ -31,6 +32,10 @@
     .button-main{
         padding: .65rem 2rem;
     }
+    /* .form-btn-budget{
+        font-size: 1.25rem;
+        padding: .4rem .9rem;
+    } */
     .hero-btn, .home-services-btn, .form-btn-send{
         font-size: 1.1em;
     }
@@ -43,6 +48,10 @@
         padding: .7rem 2.2rem;
         margin: 1.5rem 0;
     }
+    /* .form-btn-budget{
+        font-size: 1.25rem;
+        padding: .4rem .9rem;
+    } */
     .hero-btn, .home-services-btn, .form-btn-send{
         font-size: 1.1em;
     }
