--- a/src/components/Form.css
+++ b/src/components/Form.css
@@ -5,7 +5,7 @@
 .form-h2{
     font-size: 2rem;
 }
-.form-section label{
+.input-container-label, .label-budget{
     font-size: 1.3rem;
     margin-top: 1.5rem;
 }
@@ -25,12 +25,16 @@
 select:focus, select:active{
     all: unset;
 }
-.form-section select{
+.form-container select{
     font-size: 1rem;
     border-bottom: .0625rem solid ;
     width: 100%;
     color: #868685;
     padding: 0.3rem 0 .07rem;
+}
+.form-container select option{
+    background-color: #F4F3EF;
+    outline: none;
 }
 .form-budget{
     margin-top: 0.5rem;
@@ -39,8 +43,18 @@ select:focus, select:active{
     row-gap: .4rem;
     column-gap: .7rem;
 }
+input[type="radio"]:checked + label {
+    transition: .2s linear;
+    background: #E3E1EE;
+    color: #7874F4;
+    border-color: #7874F4;
+}
+.form-budget input[type="radio"] {
+    position: absolute;
+    width: 0;
+}
 .form-check{
-    margin: 1.5rem 0 0;
+    margin: 1.5rem 0 1rem;
     display: flex;
     gap: .8rem;
     align-items: center;
@@ -48,6 +62,8 @@ select:focus, select:active{
 .form-check label{
     font-size: .75rem;
     transform: translateY(-20%);
+    height: 1.5rem;
+    max-width: 70%;
 }
 .form-section input[type="checkbox"] {
     all: unset;
@@ -61,6 +77,9 @@ select:focus, select:active{
 .form-section input[type="checkbox"]:checked {
     background-color: #7874F4;
 }
+.form-btn-send{
+    margin-top: 2rem;
+}
 @media(min-width:40rem){
     .form-section{
         width: 90%;
@@ -68,7 +87,7 @@ select:focus, select:active{
     .form-h2{
         font-size: 2.5rem;
     }
-    .form-section label{
+    .input-container-label, .label-budget{
         font-size: 1.4rem;
         margin-top: 1.7rem;
     }
@@ -79,6 +98,8 @@ select:focus, select:active{
     }
     .form-check label{
         font-size: .9rem;
+        height: .9rem;
+        max-width: unset;
     }
 }
 @media(min-width:56.25rem){
@@ -96,17 +117,15 @@ select:focus, select:active{
         display: flex;
         gap: 1rem;
     }
-    .input-container > label {
+    .input-container-label, .label-budget{
         text-wrap: nowrap;
-    }
-    .form-section label{
         font-size: 1.3rem;
         margin-top: .5rem;
     }
     .form-section input, .form-section select{
-        width: 22vw;
+        width: 26vw;
     }
-    .form-budget button{
+    .form-btn-budget{
         padding: .15rem 1rem;
         margin: 0;
     }
@@ -118,6 +137,10 @@ select:focus, select:active{
     }
     .form-check > label{
         font-size: 1.2em;
+        height: 1.2rem;
+    }
+    .form-section input[placeholder]::placeholder{
+        font-size: 1.25rem;
     }
 }
 @media(min-width:90rem){
@@ -127,11 +150,12 @@ select:focus, select:active{
     }
     .form-section{
         margin: 4rem;
+        overflow-x: hidden;
     }
     .form-container{
         display: flex;
         flex-wrap: wrap;
-        column-gap: 2rem;
+        column-gap: 1.5rem;
         width: 100%;
     }
     .input-container{
@@ -139,22 +163,22 @@ select:focus, select:active{
         display: flex;
         gap: 2.2rem;
     }
-    .input-container > label {
-        text-wrap: nowrap;
-    }
-    .form-section label{
+    .input-container-label, .label-budget{
         font-size: 1.88rem;
         margin-top: .5rem;
     }
     .form-section input, .form-section select{
         width: 23vw;
     }
-    .form-budget button{
+    .form-btn-budget{
+        display: flex;
+        justify-content: center;
+        align-items: center;
         padding: .15rem 1rem;
         margin: 0;
     }
     .form-budget {
-        margin-right: 9.5rem;
+        width: 60vw;
     }
     .label-budget {
         padding-top: .15rem;
@@ -165,22 +189,32 @@ select:focus, select:active{
     .input-container-text > input{
         width: 43vw;
     }
+    .input-container input[type="email"]{
+        width: 25rem;
+        margin-right: 30vw;
+    }
     .form-check{
         gap: 1rem;
     }
 }
 @media(min-width:120rem){
     .form-section{
-        margin: 4rem auto;
+        margin: 4rem;
     }
-    .form-section input, .form-section select{
-        width: 29vw;
-    }
-    .form-budget button{
+    .form-btn-budget{
         padding: .35rem 1.3rem;
         margin: 0;
     }
-    .input-container-text > input{
-        width: 57vw;
+    .form-section input, .form-section select{
+        width: 32rem;
+    }
+    .input-container input[type="email"]{
+        width: 25rem;
+        margin-right: 30vw;
+    }
+}
+@media(min-width: 121rem){
+    .form-section{
+        margin: 4rem 0;
     }
 }
