--- a/src/components/Home/Hero.css
+++ b/src/components/Home/Hero.css
@@ -99,6 +99,10 @@
         font-size: 1.1em;
         bottom: 1.2rem;
     }
+    .hero-btn{
+        position: relative;
+        z-index: 1;
+    }
 }
 @media (min-width: 56.25rem) {
     .hero-section{
@@ -198,6 +202,6 @@
 @media(min-width:125rem){
     .hero-godown{
         padding-right: 0;
-        max-width: 120rem;
+        max-width: 115rem;
     }
 }
