--- a/src/components/Home/HomeServices.css
+++ b/src/components/Home/HomeServices.css
@@ -1,6 +1,25 @@
 .home-services{
     overflow: hidden;
-    margin: 0 1rem;
+    /* padding: 0 1rem; */
+    position: relative;
+}
+.home-services-bg{
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    top: 0;
+    z-index: -1;
+    background: url('../../assets/homeServicesBg.svg') no-repeat;
+    background-position: 0 100%;
+    background-size: cover;
+}
+.home-services-bg:before{
+    content: '';
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    top: 0;
+    background: linear-gradient(0deg, #F4F3EF 0%, #ffffff00 100%);
 }
 .home-services-img{
     width: 100vw;
@@ -10,7 +29,6 @@
     object-fit: cover;
     text-align: center;
     opacity: 0.4;
-
 }
 .home-services-h2{
     font-size: 1.875em;
@@ -35,19 +53,22 @@
     text-wrap: balance;
     max-width: 30rem;
 }
+.home-services-info{
+    padding: 0 1rem;
+}
 @media (min-width: 40rem) {
-    .home-services{
-        margin: 0 3.5rem 0;
-        margin: 0 4rem 0;
-        
-    }
     .home-services-info{
         display: flex;
         flex-direction: column;
     }
     .home-services-h2{
         font-size: 2.7em;
-        animation: none;
+        transform: translateX(50%);
+    }
+    @keyframes home-services-h2-animation{
+        100%{
+            transform: translateX(0%);
+        }
     }
     .home-services-img{
         align-self: center;
@@ -58,14 +79,16 @@
         line-height: 1.725rem;
         padding-top: 2rem;
     }
+    .home-services-bg{
+        background-position: 0 50%;
+    }
 }
 @media(min-width:56.25rem){
-    .home-services{
-        margin: 0 4rem 0;
+    .home-services-info, .home-services-h2{
+        padding: 0 2.5rem;
     }
     .home-services-h2{
         font-size: 4em;
-
     }
     .home-services-info{
         flex-direction: row;
@@ -73,20 +96,21 @@
         align-items: center;
     }
     .home-services-img{
-        max-width: 42rem;
-        width: 50vw;
-        height: 100%;
-        margin-left: 0;
+        max-width: 40rem;
+        width: 70vw;
+        height: 90%;
+        margin: 0;
     }
     .home-services-p{
-        font-size: 1.875rem;
-        line-height: 2rem;
         max-width: 35rem;
+    }
+    .home-services-bg{
+        background-position: 0 10%;
     }
 }
 @media(min-width: 90rem){
-    .home-services{
-        margin: 0 4rem;
+    .home-services-info{
+        padding: 0 4rem;
     }
     .home-services-h2{
         font-size: 4.5em;
@@ -98,5 +122,44 @@
     }
     .home-services-text > button{
        margin-top: 4rem;
+    }
+    .home-services-img{
+        max-width: 45rem;
+        width: 70vw;
+        height: 70%;
+        margin: 0;
+    }
+    .home-services-bg{
+        background-position: 0 10%;
+    }
+    .home-services-p{
+        font-size: 1.875rem;
+        line-height: 2rem;
+        max-width: 40rem;
+    }
+}
+@media(min-width: 110rem){
+    .home-services-p{
+        position: relative;
+        left: -2rem;
+        z-index: 1;
+        font-size: 1.875rem;
+        line-height: 2rem;
+        max-width: 48rem;
+    }
+    .home-services-btn {
+        position: relative;
+        left: -2rem;
+        z-index: 1;
+    }
+    .home-services-img{
+        max-width: 55rem;
+        width: 90vw;
+        height: 60%;
+        margin-left: 8rem;
+    }
+    .home-services-p{
+        font-size: 2em;
+        line-height: 2.3rem;
     }
 }
