--- a/src/components/Services/Services.css
+++ b/src/components/Services/Services.css
@@ -43,8 +43,8 @@
     padding: 1.5rem 1rem;
     background-color: #E3E1EE;
     border-radius: 1.25rem;
+    border: 1px solid #7874F4;
 }
-
 .services-card-1 {
     background-color: hsla(47,18%,94%,1);
     background-image: 
@@ -54,15 +54,13 @@
       radial-gradient(at 51% 22%, hsla(45,14%,94%,0.66) 0px, transparent 50%),
       radial-gradient(at 34% 40%, hsla(241,85%,70%,1) 0px, transparent 50%),
       radial-gradient(at 84% 81%, hsla(240,45%,87%,1) 0px, transparent 50%);
-    background-position: center top; /* Centrar el fondo verticalmente en la parte superior */
+    background-position: center top;
     background-size: cover;
-  }
-
+}
 .services-card-2 {
     background-color: hsla(47, 18%, 94%, 1);
     background-image: linear-gradient(-43deg, hsla(47, 18%, 94%, 1),rgba(115, 113, 244, 0.137));
 }
-
 .services-cards-top{
     max-width: 90%;
     display: flex;
@@ -98,6 +96,7 @@
     margin: 5rem 1rem 7rem;
     padding: 3rem 1rem;
     background-color: #E3E1EE;
+    color: #3C3C3B;
     border-radius: 1.25rem;
     display: flex;
     flex-direction: column;
@@ -195,18 +194,11 @@
     }
     .why-gigson p {
         font-size: 1.7em;
-        /* max-width: 28rem; */
-        /* padding-bottom: 2rem; */
     }
 }
-
-
-@media (min-width: 100rem){
+@media (min-width: 90rem){
     .hero-services{
-        margin: 13rem 0 9rem;
-    }
-    .services-container{
-        padding: 0 2rem;
+        margin: 15rem 0 11rem;
     }
     .hero-services-h1{
         max-width: 20rem;
@@ -214,22 +206,21 @@
         line-height: 3.8rem;
         padding-top: .7rem;
     }
+    .services-container{
+        padding: 0 4rem;
+    }
     .hero-services-p{
         font-size: 1.25em;
     }
     .hero-services-img{
-        height: 27rem;
-        max-width: 40rem;
-        top: 0;
-        left: 50%;
-        transform: translateX(-50%);
+        height: 33rem;
+        max-width: 47rem;
     }
     .services-cards-top{
         max-width: 100%;
         flex-direction: row;
-        justify-content: space-between;
-        align-items: center;
-        gap: 0;
+        justify-content: flex-start;
+        gap: calc(31.5% - 10rem);
         padding-bottom: 2.5rem;
     }
     .services-cards-top h2{
@@ -249,15 +240,12 @@
     }
     .services-cards > footer{
         display: grid;
-        grid-template-columns: repeat(3, 1fr);
+        grid-template-columns: repeat(3, 31.5%);
         column-gap: 2rem;
     }
     .services-card-bottom{
         justify-content: space-between;
         gap: 2rem;
-    }
-    .services-cards-span{
-        font-size: 1.25em;
     }
     .services-cards-h3{
         max-width: 18rem;
@@ -271,7 +259,7 @@
         color: #868685;
     }
     .why-gigson{
-        margin: 7rem 2rem;
+        margin: 7rem 4rem;
         padding: 3rem 2rem;
         flex-direction: row;
         justify-content: space-between;
@@ -284,7 +272,50 @@
     }
     .why-gigson p {
         font-size: 1.7em;
-        /* max-width: 28rem; */
-        /* padding-bottom: 2rem; */
+    }
+}
+@media (min-width: 110rem) {
+    .hero-services{
+        margin: 17rem 0 13rem;
+    }
+    .hero-services-img{
+        height: 37rem;
+        max-width: 52rem;
+    }
+    .services-cards{
+        padding: 4rem 3rem;
+    }
+    .services-cards-top{
+        gap: calc(31.5% - 9rem);
+    }
+    .services-cards > footer{
+        column-gap: 3rem;
+    }
+    .services-card-bottom > div{
+        padding-top: .3rem;
+    }
+    .why-gigson{
+        padding: 5rem 3rem;
+        justify-content: flex-start;
+        gap: 30%;
+    }
+    .why-gigson > h2{
+        font-size: 3.5em;
+        max-width: 27rem;
+    }
+    .why-gigson p {
+        font-size: 1.9em;
+    }
+}
+@media (min-width: 121rem) {
+    .services{
+        max-width: 115rem;
+        margin: 0 auto;
+    }
+    .services-container, .hero-services{
+        padding: 0;
+    }
+    .why-gigson{
+        margin: 7rem 0;
     }
 }
