--- a/src/components/Services/Services.css
+++ b/src/components/Services/Services.css
@@ -40,9 +40,9 @@
     left: 0;
     min-height: 40rem;
     width: 100%;
-    padding: 1.5rem 1rem;
+    padding: 1.8rem 1rem;
     background-color: #E3E1EE;
-    border-radius: 1.25rem;
+    border-radius: 2rem;
     border: 1px solid #7874F4;
 }
 .services-card-1 {
@@ -58,9 +58,8 @@
     background-size: cover;
 }
 .services-card-2 {
-    background-color: hsla(47, 18%, 94%, 1);
-    background-image: linear-gradient(-43deg, hsla(47, 18%, 94%, 1),rgba(115, 113, 244, 0.137));
-}
+    background-color: #eeedf0;
+    }
 .services-cards-top{
     max-width: 90%;
     display: flex;
@@ -113,7 +112,7 @@
 }
 @media (min-width: 56.25rem){
     .hero-services{
-        margin: 13rem 0 9rem;
+        margin: 14rem 0 9rem;
     }
     .services-container{
         padding: 0 2rem;
@@ -155,7 +154,7 @@
         top: 8rem;
         min-height: 20rem;
         width: 100%;
-        padding: 2rem 2rem 4rem;
+        padding: 2.5rem 2rem 2rem;
     }
     .services-cards > footer{
         display: grid;
@@ -167,18 +166,20 @@
         gap: 2rem;
     }
     .services-cards-span{
-        font-size: 1.25em;
+        font-size: 1.05em;
     }
     .services-cards-h3{
         max-width: 18rem;
         font-size: 2rem;
         line-height: 2.2rem;
         color: #3c3c3b;
+        padding-top: .5rem;
     }
     .services-cards-p{
         max-width: 20rem;
         font-size: 1.25rem;
         color: #868685;
+        height: 5rem;
     }
     .why-gigson{
         margin: 7rem 2rem;
@@ -198,7 +199,7 @@
 }
 @media (min-width: 90rem){
     .hero-services{
-        margin: 15rem 0 11rem;
+        margin: 15rem 0 12rem;
     }
     .hero-services-h1{
         max-width: 20rem;
@@ -236,7 +237,7 @@
         top: 8rem;
         min-height: 20rem;
         width: 100%;
-        padding: 2rem 2rem 4rem;
+        padding: 2.5rem 2rem 2.5rem;
     }
     .services-cards > footer{
         display: grid;
@@ -282,9 +283,7 @@
         height: 37rem;
         max-width: 52rem;
     }
-    .services-cards{
-        padding: 4rem 3rem;
-    }
+
     .services-cards-top{
         gap: calc(31.5% - 9rem);
     }
