--- a/src/components/About/AboutHero.css
+++ b/src/components/About/AboutHero.css
@@ -5,7 +5,7 @@
     flex-direction: column;
     justify-content: center;
     width: 100%;
-    overflow-x: hidden;
+    overflow: hidden;
     position: relative;
 }
 .about-bg{
