--- a/src/components/Home/HomeServices.css
+++ b/src/components/Home/HomeServices.css
@@ -30,16 +30,27 @@
     text-align: center;
     opacity: 0.4;
 }
-.home-services-h2{
-    font-size: 1.875em;
-    text-wrap: nowrap;
-    margin-top: 2.7rem;
-    color: #fff;
-    animation: home-services-h2-animation both 5s infinite;    
+.home-text-container{
+    display: flex;
+    /* padding: 3.75rem 0; */
 }
-@keyframes home-services-h2-animation{
-    100%{
-        transform: translateX(-35%);
+.services-h2{
+    animation: scrollLeft 7s linear infinite;
+    margin-top: 2.7rem;
+    white-space: nowrap; 
+}
+.home-services-h2 {
+    font-size: 1.875em;
+    color: #fff;
+    text-wrap: nowrap;
+}
+
+@keyframes scrollLeft {
+    0% {
+        transform: translateX(0);
+    }
+    100% {
+        transform: translateX(-100%);
     }
 }
 .home-services-h2 span{
