--- a/src/components/Home/Hero.css
+++ b/src/components/Home/Hero.css
@@ -12,6 +12,7 @@
     max-height: 32rem;
     min-height: 22rem;
     object-fit: contain;
+    aspect-ratio: 1/1;
 }
 .hero-top-content {
     display: flex;
